--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Day_5\Day_5_1.cs" />
     <Compile Include="Day_5\Day_5_2.cs" />
     <Compile Include="Day_6\Day_6_1.cs" />
+    <Compile Include="Day_6\Day_6_2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
