--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Content Include="Day_3\Input.txt" />
     <Content Include="Day_6\Input_6_1.txt" />
+    <Content Include="Day_6\Input_6_2.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
